Fix: changed readme message

--- a/resources/views/readme.html
+++ b/resources/views/readme.html
@@ -1,10 +1,13 @@
 
 <div class="readme">
     <div class="readme-closing" ng-click="showingReadMe(false)"></div>
-    Hello my name is Mike<br>
-    and this is my crazy Windows like looking website.<br>
-    use F11 keyboard button to see how cool it looks like:)<br><br>
+    Hello<br>
+    welcome to my Windows like looking website.<br>
+    use F11 keyboard button to see how cool it looks like in full screen mode:)<br><br>
+
+    no more BSODs ;)
 
     I wish you nice browsing!
+    -Michał
 
 </div>
