Fix: changed readme message

--- a/resources/views/readme.html
+++ b/resources/views/readme.html
@@ -5,9 +5,9 @@
     welcome to my Windows like looking website.<br>
     use F11 keyboard button to see how cool it looks like in full screen mode:)<br><br>
 
-    no more BSODs ;)
+    no more BSODs ;)<br><br>
 
-    I wish you nice browsing!
+    I wish you nice browsing!<br>
     -Michał
 
 </div>
