NEW: First splash screen mock

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -264,3 +264,15 @@
     /*float: left;*/
     /*clear: left;*/
 }
+
+.start-splash-screen{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+
+    z-index: 1006;
+    background-color:red;
+
+}
