--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -273,6 +273,24 @@
     height: 100vh;
 
     z-index: 1006;
-    background-color:red;
+    /*background-color:red;*/
+    background: url('../img/bckgrd.jpg');
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+    overflow: hidden;
+}
 
+.indicator{
+    color: #fff;
+
+    position: absolute;
+    bottom: 150px;
+    left: 20%;
+}
+.indicator-text{
+    position: absolute;
+    bottom: 170px;
+    left: 30%;
+    font-size: xx-large;
+    color: #fff;
 }
